refactor(mask):优化字符串脱敏实现并更新上下文变量命名
- 将 StringRangMasker 类改为 record 实现，简化代码结构
- 更新上下文变量名称前缀，从 @@__ 改为 @@wind__
- 替换 ObjectMaskPrinter 为 WindMasker 引用
- 优化 JSON 和 Map 对象的脱敏处理逻辑
- 改进 MaskerFactory 中的异常处理和实例化方式
- 简化 MaskRuleGroup 中的规则添加逻辑
- 移除不必要的换行和代码格式调整
- 更新测试类访问修饰符为包级私有